# molli

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  COVER.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  docker-conda-env.yaml  entrypoint.sh  environment.yml  optional-deps.txt  pyproject.toml  requirements.txt  setup.py  welcome.rst
.github/workflows/: anaconda-deploy  anaconda-deploy.yml  anaconda-test-upload.yml  docker.yml  mamba-build-minimal.yml  mamba-build-test.yml  package-test-minimal.yml  package-test.yml  python-publish.yml  python-test-pypi.yml
benchmark/: 01-cdist.py
benchmarks/: archive_collection_comparison.py  hd5f_collection_comparison.py
conda-recipe/: conda_build_config.yaml  meta.yaml
dev/: docstring.mustache
docs/: COVER.rst  atom.rst  environment.yml  requirements.txt
docs/source/: 01-molli-preamble.md  02-basics.md  03-visualization.md  conf.py  index.rst  requirements.txt  welcome.md
examples/: 002-molecule.ipynb  003-openbabel.ipynb  004-libraries.ipynb  README.md
examples-jupyter/: 001-helloworld.ipynb  002-atom.ipynb  002-molecule.ipynb  003-bond.ipynb  003-del-bond.ipynb  003-openbabel.ipynb  004-libraries.ipynb  005-conformerensemble.ipynb  005-grid.ipynb  005-visualize.ipynb  006-chemdraw.ipynb  006-grid.ipynb  006-libraries.ipynb  007-del-bond.ipynb  007-openbabel.ipynb  007-visualization.ipynb  008-chemdraw.ipynb  008-rdkit.ipynb  009-chemdraw-figure.ipynb  009-openbabel.ipynb  009-visualize-pyvista.ipynb  010-BOX_workflow.ipynb  010-matplotlib.ipynb  010-rdkit.ipynb  011-gbca.ipynb  012-jobmap.ipynb  013-BOX_workflow.ipynb  014-map.ipynb  300-doctest-mol.ipynb  carfilzomib.cdxml  ncsa1-substituent-parsing.ipynb  ncsa2-command-line-parse-test.ipynb  ncsa3-combinatorial-expansion-test.ipynb
examples-jupyter/out_combinatorial/: combinatorial_lib.mlib  combinatorial_lib_check.mlib  combinatorial_no_H_lib.mlib
examples-scripts/: 001_pyvista1.py  002_pyvista2.py  003_pyvista_vdw.py
examples-zenodo/01-geom-molnet-dataset/: 001-molnet.ipynb
examples-zenodo/04-collection-comparison/: 004-readwrite.ipynb
examples-zenodo/05-gbca-benchmark/: 005-gbca.ipynb  005-sparsity.ipynb
lib_gen/: conformer_parse.py  gen-conformers-arg-parse-test.ipynb  gen-conformers-new-directories.ipynb  gen-conformers-optimization-test.ipynb  gen-conformers-series-test.ipynb  gen-conformers-test.ipynb  gen-conformers-updated.ipynb  generate_conformers.py  generate_library.py  package_conformers_delete_linker.py  post_processing.py
molli/: __init__.py  __main__.py  config.py  loaders.py  reader.py  writer.py
molli_test/: __init__.py  test_cdxml_parse.py  test_chem_connectivity.py  test_chem_geometry.py  test_chem_molecule.py  test_chem_promolecule.py  test_chem_structure.py  test_collections.py  test_conformer_ensemble.py  test_descriptor.py  test_external_morfeus.py  test_external_openbabel.py  test_external_rdkit.py  test_external_xtb.py  test_install.py  test_molli_extensions.py  test_read_write.py
molli_xt/: _molli_xt.cpp  _molli_xt.hpp  distance.cpp
ncsa-testing/: README.md  data-viz.ipynb  entire-workflow.ipynb  main.py  molli.job.yaml
source/: atom.rst  bond.rst  conf.py  ensemble.rst  fragment.rst  geometry.rst  index.rst  installation.rst  molecule.rst  requirements.txt  structure.rst
(+295 files in other folders)
